--- a/inedx.html
+++ b/inedx.html
@@ -2,12 +2,11 @@
 <html>
 <head>
 <title>Title of the document</title>
-<script charset="UTF-8" src="//cdn.sendpulse.com/28edd3380a1c17cf65b137fe96516659/js/push/f7dba5b7165951eff9c05620b23c3c0c_1.js" async>
-</script>
+<script charset="UTF-8" src="//cdn.sendpulse.com/28edd3380a1c17cf65b137fe96516659/js/push/f7dba5b7165951eff9c05620b23c3c0c_1.js" async></script>
 </head>
 
 <body>
-The content of the document......
+
 </body>
 
 </html>
